fix header overlapping

--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -20,14 +20,28 @@
 	z-index: 1;
 }
 .header-info {
+	/* width: 100vw; */
 	display: flex;
+	margin-left: auto;
+	margin-right: auto;
 	flex-direction: row;
 	justify-content: center;
+	min-width: 620px;
+}
+.back-button {
+	flex-basis: 100px;
+	flex-grow: 0;
+	flex-shrink: 0;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	margin-left: 35px;
+	z-index: 5;
 }
 .title-white {
 	color: white;
 	text-align: center;
 	font-size: 18pt;
+	width: 100vw;
 	z-index: 5;
 }
 
@@ -35,27 +49,48 @@
 	color: black;
 	text-align: center;
 	font-size: 18pt;
+	width: 100vw;
 	z-index: 5;
 }
 .login-button {
+	flex-basis: 100px;
+	flex-grow: 0;
+	flex-shrink: 0;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	margin-right: 35px;
 	z-index: 5;
+}
+
+.login-container {
+	display: flex;
+	flex-direction: row;
 }
 .login-container p {
 	font-size: 16px;
 	font-family: 'Montserrat';
-	text-align: right;
-	position: fixed;
-	top: 35px;
-	right: 100px;
-	padding-left: 50px;
+	padding-right: 10px;
 	z-index: 5;
 }
 
-/* .header-container {
-	display: flex;
-	align-content: center;
-	flex-direction: column;
-	flex-wrap: wrap;
-	flex-shrink: 0;
-	min-width: 100vw;
-	/* overflow: scroll; */
+.back-button img {
+	width: 50px;
+	height: 50px;
+
+	transition: all 0.2s;
+}
+
+.back-button img:hover {
+	transform: scale(1.2);
+}
+
+.login-button img {
+	width: 50px;
+	height: 50px;
+
+	transition: all 0.2s;
+}
+
+.login-button img:hover {
+	transform: scale(1.2);
+}
