--- a/front-end/src/components/Posts.css
+++ b/front-end/src/components/Posts.css
@@ -28,31 +28,3 @@
 	width: 400px;
 	height: 500px;
 }
-
-.back-button img {
-	position: fixed;
-	width: 50px;
-	height: 50px;
-	top: 36px;
-	left: 36px;
-	z-index: 2;
-	transition: all 0.2s;
-}
-
-.back-button img:hover {
-	transform: scale(1.1);
-}
-
-.login-button img {
-	position: fixed;
-	width: 50px;
-	height: 50px;
-	right: 36px;
-	top: 36px;
-	z-index: 2;
-	transition: all 0.2s;
-}
-
-.login-button img:hover {
-	transform: scale(1.1);
-}
